--- a/NguyenMinhQuan546/Views/Shared/_Layout.cshtml
+++ b/NguyenMinhQuan546/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="SinhVien" asp-action="Index">Sinh Viên</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LopHoc" asp-action="Index">Lớp Học</a>
+                        </li>
                     </ul>
                 </div>
             </div>
